Added tags to api docs
